--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,11 @@
     <div class="scene">
         <div id="scene"></div>
     </div>
+    <div class="gameover" id="gameover">
+        <div class="msgBox">
+            Game Over!
+        </div>
+        <div class="reStart" id="restart">重新开始</div>
+    </div>
 </body>
 </html>
